--- a/views/index.pug
+++ b/views/index.pug
@@ -3,4 +3,4 @@ extends layout
 block content
   h1= title
   p Welcome to the world
-button(type='button', class='btn btn-success') Press Me
+  button(type='button', class='btn btn-info') Press Me
